update path finding